# newlib

./: .bintray_descriptor.json  .travis.yml  config.sub  tests.sh
libgloss/aarch64/: syscalls.c
newlib/: configure.host
newlib/libc/include/machine/: time.h
newlib/libc/include/sys/: _pthreadtypes.h  features.h  select.h  signal.h
newlib/libc/stdlib/: mallocr.c
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/hermit/: Makefile.am  Makefile.in  _exit.c  chown.c  clock_getres.c  clock_gettime.c  clock_nanosleep.c  clock_settime.c  close.c  configure  context.S  crt0.c  execve.c  fork.c  fstat.c  fsync.c  getpagesize.c  getpid.c  gettod.c  isatty.c  kill.c  link.c  lseek.c  makecontext.c  mman.c  mmap.c  nanosleep.c  open.c  read.c  readlink.c  sbrk.c  sched.c  setitimer.c  signal.c  sleep.c  stat.c  symlink.c  syscall.h  sysconf.c  times.c  (+3 more)
newlib/libc/sys/hermit/include/sys/: dirent.h  errno.h  mman.h  stat.h
newlib/libc/sys/hermit/sys/: fcntl.h
